Revision history for Perl extension Statistics::Descriptive.

    - Added tests (for ->count, ->sum, ->sumsq, ->min, ->max)
    - Localized the scope of $stat and other variables in t/descr.t
    - Got rid of AUTOLOAD in favour of individual accessors.
    - Converted many direct member accesses to the accessors.

2.9   May 13, 2009

    - Fixed bug https://rt.cpan.org/Public/Bug/Display.html?id=46026 :
        - standard_deviation failing due to a variance that got evaluated
        to 0 due to rounding errors.
    - Kwalitee : added a LICENSE section to the POD.
    - Kwalitee (CPANTS) : added an examples/ directory with a script.

2.8   May 09, 2009

    - Enabled "./Build runtest" and "./Build distruntest" (using Test::Run)
    in the distribution.

    - Fixed incomplete/broken tests in t/descr.t.

2.7   May 03, 2009

    - Converted the distribution to Build.PL and re-organized it to
    put everything under its proper place. Started maintaining it in:
        - http://svn.berlios.de/svnroot/repos/web-cpan/Statistics-Descriptive/

    - Converted t/descr.t to use "use strict;" and "use warnings;".
    
    - Converted t/descr.t to use Test::More.

    - Cleaned up the "use" statement of lib/Statistics/Descriptive.pm.

    - Added more explicit dependencies (core, though) to Build.PL. 

    - Fixed RT bug #34999: freq distribution generated too many bins.
        - https://rt.cpan.org/Ticket/Display.html?id=34999

    - Added some keywords and resources to the META.yml, using Build.PL's
    meta_merge.

    - Fixed https://rt.cpan.org/Ticket/Display.html?id=32183 
        - more authoritative (and non-broken) link to the RFC.

    - Applied the patch in https://rt.cpan.org/Ticket/Display.html?id=9160 
        - {{#9160: Variance and Standard Deviation use costly pseudo-variance, 
        instead of computing real variance}}.

2.6   October 10, 2002
    - Fixed caching in trimmed mean and modified code to allow trimming